Added Timezone API Token and began Yo framework

--- a/main.html
+++ b/main.html
@@ -24,8 +24,10 @@
                 </div>
             </div>
             <div class="row">
-              <div>
-                
+              <div class="col-md-4 col-md-offset-4">
+                <p class="text-center">
+                   Welcome to YoNewYear, the Yo index that tell you when the New Year is coming to you. Includes a countdown. 
+                </p>
               </div>
               
             </div>
