--- a/user.html
+++ b/user.html
@@ -25,9 +25,7 @@
             </div>
             <div class="row">
               <div class="col-md-4 col-md-offset-4">
-                <p class="text-center">
-                   Welcome to YoNewYear, the Yo index that tell you when the New Year is coming to you. Includes a countdown. 
-                </p>
+                <p class="text-center"></p>
               </div>
               
             </div>
