--- a/main.html
+++ b/main.html
@@ -25,7 +25,7 @@
             </div>
             <div class="row">
               <div class="col-md-4 col-md-offset-4">
-                <p class="text-center">
+                <p class="text-center description">
                    Welcome to YoNewYear, the Yo index that tell you when the New Year is coming to you. Includes a countdown. 
                 </p>
               </div>
