--- a/user.html
+++ b/user.html
@@ -25,9 +25,13 @@
             </div>
             <div class="row">
               <div class="col-md-4 col-md-offset-4">
-                <p class="text-center"></p>
+                <h2>{{ location }}</h2>
               </div>
-              
+            </div>
+            <div class="row">
+                <div class="col-md-4 col-md-offset-4">
+                    <h2>{{ currenttime }}</h2>
+              </div>
             </div>
         </div>
     
